--- a/Lessons/11_TimeSeries.Rmd
+++ b/Lessons/11_TimeSeries.Rmd
@@ -93,11 +93,11 @@ print(ClearCreekRegressionPlot)
 
 Is a linear regression an appropriate model for the data in this case? Why or why not?
 
-> 
+> No because there is too much seasonality and it is not a good predictor of discharge on any given day.
 
 Are there situations where it would be appropriate to use a linear regression to model a time series? If so, what is an example?
 
->
+> Data without seasonality or cycles, taking data from same day/month/season over time, annual means. 
 
 
 ## Decomposing a time series dataset
@@ -114,6 +114,7 @@ We first need to turn the discharge data into a time series object in R. This is
 Note: time series objects must be equispaced, which requires interpolation if the data have not been collected at regular intervals. In our case, we have daily data with no NAs in the data frame, so we don't need to worry about this.
 ```{r}
 ClearCreek_ts <- ts(ClearCreekDischarge[[4]], frequency = 365)
+table(diff(ClearCreekDischarge$Date)) #check to see if any dates are missing.  One is missing, can ignore it
 
 ```
 
