Lesson 13 day 1 notes

--- a/Lessons/13_High_Frequency_Data.Rmd
+++ b/Lessons/13_High_Frequency_Data.Rmd
@@ -17,7 +17,7 @@ editor_options:
 
 High frequency data is usually defined as frequencies significantly lower than daily (e.g. 5-minute, 15-minute, 1 hr etc). What types of hydrological and biological processes happen on this timescale that we might want to investigate?
 
->
+>precipitation, respiration, photosynthesis, contaminant transport, temperature, dissolved oxygen, nutrient inputs/outputs, 
 
 
 ## Session Set Up
@@ -28,6 +28,8 @@ getwd()
 packages <- c(
   "dataRetrieval", "tidyverse", "cowplot", "EcoHydRology", "xts", "dygraphs"
   )
+
+#install.packages("EcoHydRology")
 invisible(lapply(packages, library, character.only = TRUE)) 
 
 theme_set(theme_classic(base_size = 12))
@@ -72,7 +74,7 @@ plot_grid(
 
 The shape and size of river hydrographs following rain events can tell us how water moves through a watershed. Once rain falls, how does water get to a stream? What would the streamflow do?
 
->
+>overland flow, groundwater, rain directly in the river channel, pipes from sewers. Storms create peaks in graph (quickflow), baseflow is flow of river after rain event.
 
 
 _"Hydrograph separation is one of the most desperate analysis techniques in use in hydrology" - Hewlett & Hibbert 1967_
@@ -89,7 +91,7 @@ TFC2018 <- cbind(dischargedatTFC2018, TFCbaseflow)
 
 ggplot(TFC2018, aes(x = dateTime, y = Flow_Inst)) + 
   geom_line() +
-  # scale_y_log10() +
+  #scale_y_log10() +
   geom_line(mapping = aes(x = dateTime, y = bt), color = "darkorange4") +
   geom_line(mapping = aes(x = dateTime, y = qft), color = "steelblue4")
 
@@ -114,15 +116,35 @@ Export <- TFC2018 %>%
 
 What percentage of water is exported from this watershed as baseflow? What percentage as quickflow?
 
-> 
+> 51.9 % baseflow and 48.1% quickflow
 
 Repeat this analysis for Ellerbe Creek. How do the percentages compare?
 
->
+```{r}
+ECbaseflow <- BaseflowSeparation(
+  dischargedatEC2018$Flow_Inst, 
+  filter_parameter = 0.925, 
+  passes = 3
+  )
+
+EC2018 <- cbind(dischargedatEC2018, ECbaseflow)
+
+ExportEC <- EC2018 %>%
+  mutate(timestep = c(diff(as.numeric(dateTime)), NA_real_),
+         baseflowexport = bt * timestep,
+         quickflowexport = qft * timestep) %>%
+  summarize(BaseflowExport_cf = sum(baseflowexport, na.rm = T),
+            QuickflowExport_cf = sum(quickflowexport, na.rm = T),
+            TotalExport_cf = BaseflowExport_cf + QuickflowExport_cf)
+
+```
+
+
+> 43.4% baseflow and 56.6% quickflow
 
 What does this mean physically about the watershed?
 
->
+> There are more impermeable surfaces with less opportunities for infiltration into soils and groundwater, less plants to take up excess runoff than Third Fork Creek.
 
 ## Hydrologic Flashiness
 
@@ -130,11 +152,11 @@ A "flashy" stream increases in flow faster following a precipitation event.
 
 Refering to our previous work with baseflow separation, would you expect flashiness to increase or decrease with urbanization?
 
-> 
+> increase 
 
 What do you think "urban stream syndrom" refers to?
 
->
+> high quickflow percentages, low baseflow percentages; a lot of water coming out of pipes going directly into streams, eroded stream beds that are deeper and more incized, water quality parameters that match these conditions
 
 The Richards-Baker Index is an index of how flashy a stream is. It is calculated as $$RBI = (\sum_{j = 1}^n |Q_j - Q_{j-1}| / \sum_{j = 1}^n Q_j) / Catchment Area$$
 
@@ -159,7 +181,46 @@ RBI_EC2018 <- (
 
 Which stream is flashier?
 
->
+>Ellerbe Creek is flashier than Third Fork Creek.
+
+```{r}
+#Doing it on our own for a different site
+dischargedatVR2018 <- readNWISuv(
+  site = "03550000", #VALLEY RIVER AT TOMOTLA
+  parameterCd = "00060",
+  startDate = "2018-01-01", 
+  endDate = "2019-01-01"
+  ) %>% 
+  renameNWISColumns()
+
+VRbaseflow <- BaseflowSeparation(
+  dischargedatVR2018$Flow_Inst, 
+  filter_parameter = 0.925, 
+  passes = 3
+  )
+
+VR2018 <- cbind(dischargedatVR2018, VRbaseflow)
+
+
+Export <- VR2018 %>%
+  mutate(timestep = c(diff(as.numeric(dateTime)), NA_real_),
+         baseflowexport = bt * timestep,
+         quickflowexport = qft * timestep) %>%
+  summarize(BaseflowExport_cf = sum(baseflowexport, na.rm = T),
+            QuickflowExport_cf = sum(quickflowexport, na.rm = T),
+            TotalExport_cf = BaseflowExport_cf + QuickflowExport_cf)
+
+VRsitedata <- readNWISsite(site = "03550000")
+VR.catchment.size <- VRsitedata$drain_area_va #square miles
+
+RBI_VR2018 <- (
+  sum(abs(diff(dischargedatVR2018$Flow_Inst))) / 
+    sum(dischargedatVR2018$Flow_Inst[-1])
+  ) / VR.catchment.size
+
+
+```
+
 
 ## Chemical Flashiness
 
