--- a/Lessons/14_High_Frequency_Data.Rmd
+++ b/Lessons/14_High_Frequency_Data.Rmd
@@ -25,8 +25,10 @@ Wednesday we used high-frequency hydrographs to learn about how water flows thro
 ```{r, message = FALSE}
 getwd()
 
-# install.packages("StreamPULSE")
-# install.packages("streamMetabolizer")
+# install.packages("xfun")
+library(devtools)
+ install_github('streampulse/StreamPULSE')
+# install.packages("streamMetabolizer", dependencies = TRUE, repos = c("https://owi.usgs.gov/R","https://cran.rstudio.com"))
 
 packages <- c(
   "dataRetrieval", 
