--- a/Lessons/14_High_Frequency_Data.Rmd
+++ b/Lessons/14_High_Frequency_Data.Rmd
@@ -26,8 +26,10 @@ Wednesday we used high-frequency hydrographs to learn about how water flows thro
 getwd()
 
 # install.packages("xfun")
+
+
 library(devtools)
- install_github('streampulse/StreamPULSE')
+# install_github('streampulse/StreamPULSE')
 # install.packages("streamMetabolizer", dependencies = TRUE, repos = c("https://owi.usgs.gov/R","https://cran.rstudio.com"))
 
 packages <- c(
@@ -88,7 +90,7 @@ ggplot(Potdat,
 
 Which of these rivers is more chemostatic?
 
->
+>chemostatic: chemical concentrations to do not change with discharge. Crane creek is more chemostatic
 
 ## Hysteresis Loops
 
@@ -107,7 +109,8 @@ dygraph(
 
 Look at the storm that occured around February 1st. Do you expect this storm to be a flushing or a diluting storm?
 
->
+>diluting: concentration goes down with increased flow. Flushing: as flow increases, concentration increases.
+hysteresis: behavior is different at the beginning and the end of an event (different sources from quickflow vs. baseflow).
 
 ```{r}
 PotomacStorm <- Potdat %>%
@@ -121,21 +124,21 @@ ggplot(PotomacStorm, aes(x = Flow_Inst, y = Nitrate_mgl, color = dateTime)) +
 
 Did this storm exhibit clockwise or counterclockwise hysteresis?
 
->
+> counterclockwise
 
 Which direction do hysteresis loops slope for diluting storms?
 
->
+>counterclockwise
 
 Which direction do hysteresis loops go for flushing storms?
 
->
+>either way
 
 ## Using dissolved oxygen to estimate metabolism
 
 What is "ecosystem metabolism"?
 
->
+>how much energy is being consumed/produced and at what rate; GPP (produces carbon and oxygen), Ecosystem Respiration (ER) (consumes oxygen, respires co2)
 
 Why would we want to know the *GPP* and *ER* of a river reach?
 
@@ -171,7 +174,7 @@ $\frac{dO_2}{dt} = P_t + R_t + D_t$
 
 What are P~t~, R~t~ and D~t~? What are these parameters functions of?
 
->
+>productivity, respiration, dispersion
 
 
 Visit https://data.streampulse.org/ 
