--- a/Lessons/15_Mapping.Rmd
+++ b/Lessons/15_Mapping.Rmd
@@ -16,6 +16,12 @@ editor_options:
 ## Opening Discussion
 
 What are some examples of spatial data in the aquatic sciences? Why might you want to map these?
+-physical features of lakes, rivers, watersheds
+-visualizing results
+-able to see spatial distributions
+-may be helpful in coming up with research questions that would have otherwise not have been obvious
+-where contaminants are originating from 
+-
 
 ## Spatial visualization
 
@@ -28,9 +34,9 @@ The geometry of a given spatial data point consists of coordinates in 2-, 3-, or
 
 A feature (object) most often falls into one of these three categories (more complex examples exist; see the `sf` package documentation for more): 
 
-* **Point** <add notes here>
-* **Line** <add notes here>
-* **Polygon** <add notes here>
+* **Point** <no dimension or area, holds information about location w/ lat & long>
+* **Line** <connection between 2+ points, 1-2 dimensions>
+* **Polygon** <have area, 2 dimensions>
 
 
 ## Mapping in R
@@ -48,6 +54,7 @@ We will be using the `sf` ("simple features") package today. A helpful vignette 
 
 ```{r, message = FALSE}
 getwd()
+
 
 library(tidyverse)
 library(lubridate)
@@ -115,7 +122,7 @@ secchi.summary <- LAGOScombined %>%
             area = mean(lake_area_ha),
             depth = mean(maxdepth),
             lat = mean(nhd_lat), 
-            long = mean(nhd_long)) %>%
+            long = mean(nhd_long)) %>% #need to tell it what to populate with, have to include lat long depth area etc in order for them to be in the df
   drop_na()
 ```
 
@@ -147,23 +154,56 @@ Your turn! Notice that Maine has a large number of lakes with secchi depth measu
 
 ```{r}
 
+secchi.maine <- LAGOScombined %>%
+  filter(state == "ME") %>%
+  group_by(lagoslakeid) %>%
+  summarise(secchi.mean = mean(secchi),
+            area = mean(lake_area_ha),
+            depth = mean(maxdepth),
+            lat = mean(nhd_lat), 
+            long = mean(nhd_long)) %>% #need to tell it what to populate with, have to include lat long depth area etc in order for them to be in the df
+  drop_na()
+
+maine.subset <- filter(states, ID %in% 
+                          c("maine"))
+
+maine.spatial <- st_as_sf(secchi.maine, coords = c("long", "lat"), crs = 4326)
 ```
+
 
 2. Create a plot of mean secchi depth for lakes in Maine, with mean secchi depth designated as color and the lake area as the size of the dot. Remember that you are using size in the aesthetics and should remove the size = 1 from the other part of the code. Adjust the transparency of points as needed.
 
 ```{r}
+Maineplot.area <- ggplot() +
+  geom_sf(data = maine.subset, fill = "white") +
+  geom_sf(data = maine.spatial, aes(color = secchi.mean, size = area), 
+          alpha = 0.5) +
+  scale_color_viridis_c() +
+  labs(color = "Average Secchi Depth (m)") +
+  theme(legend.position = "top")
+print(Maineplot.area)
+
 
 ```
 
 3. Create a second plot, but this time use maximum depth of the lake as the size of the dot. 
 
 ```{r}
+Maineplot.depth <- ggplot() +
+  geom_sf(data = maine.subset, fill = "white") +
+  geom_sf(data = maine.spatial, aes(color = secchi.mean, size = depth), 
+          alpha = 0.5) +
+  scale_color_viridis_c() +
+  labs(color = "Average Secchi Depth (m)") +
+  theme(legend.position = "top")
+print(Maineplot.depth)
 
 ```
 
 4. Plot these maps in the same plot with the `plot_grid` function. Don't worry about adjusting the legends (if you have extra time this would be a good bonus task).
 
 ```{r}
+plot_grid(Maineplot.area, Maineplot.depth)
 
 ```
 
